hphp/test/zend/bad/tests/classes/inheritance_004.php
<?php

class A
{
	function f() {}
}

class B extends A
{
	function f($x) {}
}

?>
===DONE===